<resources>
    <string name="app_name">SantaUTI</string>
    <string name="login">Login</string>
    <string name="Usuario">Usuario</string>
    <string name="Senha">Senha</string>
    <string name="Normal">Normal</string>
    <string name="title_activity_ficha">Evolução</string>
    <string name="title_activity_home">Pacientes</string>
    <string name="action_search">Filtrar</string>
    <string name="MonitorMultiparametrico">Monitor Multiparamétrico</string>
    <string name="Exames">Exames</string>
    <string name="FolhasBalanco">Folhas de Balanço</string>
    <string name="BombaInfusao">Bomba de Infusão</string>
    <string name="Dispositivos">Dispositivos</string>
    <string name="Respirador">Respirador</string>
    <string name="Neurologico">Neurológico</string>
    <string name="Hemodinamico">Hemodinâmico</string>
    <string name="Respiratorio">Respiratório</string>
    <string name="GastroIntestinal">GastroIntestinal</string>
    <string name="Renal">Renal</string>
    <string name="Hematologico">Hematológico</string>
    <string name="Endocrino">Endócrino</string>
    <string name="Infeccioso">Infeccioso</string>
    <string name="Metabolico">Metabólico</string>
    <string name="Evolucao">Evolução</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="sharedPrefecences">SantaUTISharedPreferences</string>
    <string name="acess_token">acess_token</string>
    <string name="registroMedico">registroMedico</string>
    <string name="tipoProfissional">tipoProfissional</string>
    <string name="Ritmo">Ritmo</string>
    <string name="GasometriaArterial">Gasometria Arterial</string>
    <string name="Hidratacao">Hidratação</string>
    <string name="DisturbioEletrolitico">Disturbio Eletrolítico</string>
    <string name="AcidoseMetabolica">Acidose Metabólica</string>
    <string name="FrequenciaCardiaca">Frequência Cardíaca</string>
    <string name="FrequenciaRespiratoria">Frequencia Respiratória</string>
    <string name="Temperatura">Temperatura</string>
    <string name="Capnometria">Capnometria</string>
    <string name="PAM">PAM</string>
    <string name="PIC">PIC</string>
    <string name="PVC">PVC</string>
    <string name="PPC">PPC</string>
    <string name="Swanganz">Swan-ganz</string>
    <string name="SPO2">SPO2 (%)</string>
    <string name="SJO2">SJO2 (%)</string>
    <string name="PesoKG">Peso (kg)</string>
    <string name="Urina">Urina</string>
    <string name="Clara">Clara</string>
    <string name="Escura">Escura</string>
    <string name="EmDialise">Em Diálise?</string>
    <string name="Sim">Sim</string>
    <string name="Nao">Não</string>
    <string name="FoneseBulhas">Fonese de Bulhas</string>
    <string name="Sopro">Sopro</string>
    <string name="Pulso">Pulso</string>
    <string name="PerfusaoCapilar">Perfusão Capilar</string>
    <string name="TipoSopro">Tipo do Sopro</string>
    <string name="IntensidadeSopro">Intensidade do Sopro</string>
    <string name="Hematocrito">Hematócrito</string>
    <string name="Hemoglobina">Hemoglobina</string>
    <string name="Plaquetas">Plaquetas</string>
    <string name="Tromboprofilaxia">Tromboprofilaxia</string>
    <string name="CurvaTermica">Curva Térmica</string>
    <string name="MarcadoresInfeccao">Marcadores de Infecção</string>
    <string name="ViasAereas">Vias Aéreas</string>
    <string name="LocalizacaoCanula">Localização da Canula</string>
    <string name="PressaoCuff">Pressão do Cuff</string>
    <string name="MurmurioVesicular">Murmúrio Vesicular</string>
    <string name="Sibilos">Sibilos</string>
    <string name="Crepitacoes">Crepitações</string>
    <string name="Base">Base</string>
    <string name="BaseMurmurio">Base Murmurio Vesicular</string>
    <string name="TercoMedio">Terço Médio</string>
    <string name="TercoMedioMurmurioVesicular">Terço Médio Murmurio Vesicular</string>
    <string name="Apice">Ápice</string>
    <string name="ApiceMurmurioVesicular">Ápice Murmurio Vesicular</string>
    <string name="UsoDeOxigenio">Uso de Oxigênio</string>
    <string name="Fluxo">Fluxo</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Selecionar">Selecionar</string>
    <string name="MascaraVenturi">Máscara de Venturi</string>
    <string name="Roncos">Roncos</string>
    <string name="AdicionarDispositivo">Adicionar Dispositivo</string>
    <string name="Volume">Volume</string>
    <string name="VolumeMl">Volume/ml</string>
    <string name="IPAP">IPAP</string>
    <string name="EPAP">EPAP</string>
    <string name="Saturacao">Saturação</string>
    <string name="Oxigenio">Oxigênio</string>
    <string name="ModoVentilatorio">Modo Ventilatório</string>
    <string name="NivelConsciencia">Nível Consciência</string>
    <string name="Ramsay">Ramsay</string>
    <string name="RASS">RASS</string>
    <string name="EscalaGlasgow">Escala de Glasgow</string>
    <string name="AberturaOcular">Abertura Ocular</string>
    <string name="RespostaVerbal">Resposta Verbal</string>
    <string name="RespostaMotora">Resposta Motora</string>
    <string name="AvaliacaoPupilar">Avaliação Pupilar</string>
    <string name="TamanhoPupila">Tamanho</string>
    <string name="SimetriaPupila">Simetria</string>
    <string name="ReatividadeALuzPupila">Reatividade a Luz</string>
    <string name="DiferencaPupilar">Diferença entre Pupilas</string>
    <string name="Delirium">Delirium</string>
    <string name="Flutuacao">Flutuação do estado mental</string>
    <string name="Inatencao">Inatenção</string>
    <string name="PensamentoDesorganizado">Pensamento Desorganizado</string>
    <string name="FlutuacaoHint1">Existe evidência de uma mudança aguda do estado mental em relação ao estado basal do paciente?</string>
    <string name="FlutuacaoHint2">Esse comportamento anormal flutuou nas ultimas 24 horas, ou seja ele pareceu aumentar e diminuir em gravidade com o tempo?</string>
    <string name="InatencaoHint1">Tem o paciente dificuldade em focar sua atenção?</string>
    <string name="InatencaoHint2">Está reduzida a sua habilidade em manter ou mudar seu foco de atenção?</string>
    <string name="PensamentoDesorganizadoHint1">Está o pensamento do paciente desorganizado ou incoerente, como fluxo não lógico ou claro de ideias, conversa irrelevante, ou troca imprevisível entre assuntos diferentes?</string>
    <string name="PensamentoDesorganizadoHint2">O paciente é capaz de seguir comandos durante toda a entrevista?</string>
    <string name="DeficitMotor">Déficit Motor</string>
    <string name="Paresia">Paresia</string>
    <string name="ProporcaoParesia">Proporção de Paresia</string>
    <string name="Plegia">Plegia</string>
    <string name="ProporcaoPlegia">Proporção de Plegia</string>
    <string name="Presente">Presente</string>
    <string name="Ausente">Ausente</string>
    <string name="ParametrosRespirador">Paramêtros</string>
    <string name="UF">UF</string>
    <string name="TempoHora">Tempo/Hora</string>
    <string name="Heparina">Heparina</string>
    <string name="Nutricional">Nutricional</string>
    <string name="PelesMucosas">Peles e Mucosas</string>
    <string name="OsteoMuscular">Osteomuscular</string>
    <string name="Ingestao">Ingestão</string>
    <string name="Pele">Pele</string>
    <string name="UlceraPressao">Ulcera de Pressão</string>
    <string name="Mucosas">Mucosas</string>
    <string name="Musculatura">Musculatura</string>
    <string name="CurvaGlicemica">Curva Glicêmica</string>
    <string name="Evacuacoes">Evacuações</string>
    <string name="AspectoFezes">Aspecto das Fezes</string>
    <string name="NumeroEventos">Número de Eventos</string>
    <string name="Nutricao">Nutrição</string>
    <string name="Eletrolitos">Eletrólitos</string>
    <string name="Potassio">Potássio</string>
    <string name="Sodio">Sódio</string>
    <string name="Magnesio">Magnésio</string>
    <string name="Fosforo">Fósforo</string>
    <string name="Calcio">Cálcio</string>
    <string name="Albumina">Albumina</string>
    <string name="Hipocalemia">Hipocalemia</string>
    <string name="Hipercalemia">Hipercalemia</string>
    <string name="Hipomagnesemia">Hipomagnesemia</string>
    <string name="Hipermagnesemia">Hipermagnesemia</string>
    <string name="Hipofosfatemia">Hipofosfatemia</string>
    <string name="Hiperfosfatemia">Hiperfosfatemia</string>
    <string name="Hipocalcemia">Hipocalcemia</string>
    <string name="Hipercalcemia">Hipercalcemia</string>
    <string name="Hipoalbuminemia">Hipoalbuminemia</string>
    <string name="Hiperalbuminemia">Hiperalbuminemia</string>
    <string name="PCR">PCR</string>
    <string name="Estavel">Estável</string>
    <string name="EmQueda">Em Queda</string>
    <string name="Elevando">Elevando</string>
    <string name="Antibiotico">Antibióticos</string>
    <string name="RaioxTorax">Raio-x Torax</string>
    <string name="Leucograma">Leucograma</string>
    <string name="FuncaoHepatica">Função Hepática</string>
    <string name="Amilase">Amilase</string>
    <string name="Elevada">Elevada</string>
    <string name="TemporoEspacial">Orientação Temporo Espacial</string>
    <string name="Orientado">Orientado</string>
    <string name="Desorientado">Desorientado</string>
    <string name="Miose">Miose</string>
    <string name="Midriase">Midriase</string>
    <string name="Isocoricas">Isocóricas</string>
    <string name="Anisocoricas">Anisocóricas</string>
    <string name="EsquerdaMdireita">Esquerda > Direita</string>
    <string name="DireitaMesquerda">Direita > Esquerda</string>
    <string name="Reativo">Reativo</string>
    <string name="NaoReativo">Não Reativo</string>
    <string name="Nenhum">Nenhum</string>
    <string name="Hiperfonetica">Hiperfoneticas</string>
    <string name="Normofonetica">Normofoneticas</string>
    <string name="Hipofonetica">Hipofoneticas</string>
    <string name="Cianotica">Cianóticas</string>
    <string name="Acianotica">Acianóticas</string>
    <string name="Fria">Frias</string>
    <string name="Quente">Quentes</string>
    <string name="Extremidades">Extremidades</string>
    <string name="Normais">Normais</string>
    <string name="FM">FM</string>
    <string name="Adrenalina">Adrenalina </string>
    <string name="Dobutamina">Dobutamina</string>
    <string name="Dopamina">Dopamina</string>
    <string name="NitroprussiatoDeSodio">Nitroprussiato de Sodio</string>
    <string name="Nitroglicerina">Nitroglicerina</string>
    <string name="Milrinona">Milrinona </string>
    <string name="Noradrenalina">Noradrenalina</string>
    <string name="Fentanil">Fentanil </string>
    <string name="Propofol">Propofol </string>
    <string name="Ketamina">Ketamina</string>
    <string name="Midozalam"> Midazolam </string>
    <string name="Precedex">Precedex </string>
    <string name="Amiodarona">Amiodarona</string>
    <string name="Insulina"> Insulina</string>
    <string name="Hidrocortisona">Hidrocortisona</string>
    <string name="Polimixina">Polimixina</string>
    <string name="BilirrubinasElevadas">Bilirrubinas Elevadas</string>
    <string name="BilirrubinasNormais">Bilirrubinas Normais</string>
    <string name="FAGGTElevadas">FA/GGT Elevadas</string>
    <string name="FAGGTNormais">FA/GGT Normais</string>
    <string name="TransaminasesElevadas">Transaminases Elevadas</string>
    <string name="TransaminasesNormais">Transaminases Normais</string>
    <string name="HipocondrioDireito">Hipocondrio Direito</string>
    <string name="HipocondrioEsquerdo">Hipocondrio Esquerdo</string>
    <string name="Epigastrio">Epigastrio</string>
    <string name="FlancoDireito">Flanco Direito</string>
    <string name="FlancoEsquerdo">Flanco Esquerdo</string>
    <string name="Nesogastrio">Nesogastrio</string>
    <string name="FossaIliacaDireita">Fossa Iliaca Direita</string>
    <string name="FossaIliacaEsquerda">Fossa Iliaca Esquerda</string>
    <string name="Hipogastrio">Hipogastrio</string>
</resources>