<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:visibility="gone">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/epigastrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Epigastrio"
            android:theme="@style/CheckBoxStyle"
            android:paddingStart="0dp"
            android:paddingEnd="82dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/flancoDireito"
            android:theme="@style/CheckBoxStyle"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/epigastrio"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FlancoDireito"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_centerVertical="true"
            android:id="@+id/flancoEsquerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FlancoEsquerdo"
            android:theme="@style/CheckBoxStyle"
            android:paddingStart="0dp"
            android:paddingEnd="40dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/fossaIliacaDireita"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/flancoEsquerdo"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/CheckBoxStyle"
            android:text="@string/FossaIliacaDireita"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_centerVertical="true"
            android:id="@+id/fossaIliacaEsquerda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FossaIliacaEsquerda"
            android:theme="@style/CheckBoxStyle"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:theme="@style/CheckBoxStyle"
            android:id="@+id/hipocondrioDireito"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/fossaIliacaEsquerda"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HipocondrioDireito"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_centerVertical="true"
            android:id="@+id/hipocondrioEsquerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HipocondrioEsquerdo"
            android:theme="@style/CheckBoxStyle"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:theme="@style/CheckBoxStyle"
            android:id="@+id/hipogastrico"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/hipocondrioEsquerdo"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hipogastrio"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_centerVertical="true"
            android:id="@+id/nesogastrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nesogastrio"
            android:theme="@style/CheckBoxStyle"/>
    </RelativeLayout>

</LinearLayout>
