<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:id="@+id/monitor_multiparametrico_layout"
    android:animateLayoutChanges="true"
    android:weightSum="1">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:paddingTop="10dp"
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:background="?attr/selectableItemBackground"
                android:onClick="ritmoOnClick">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ritmo"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:textSize="15sp"
                    android:id="@+id/ritmo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabelBlue">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/FrequenciaRespiratoria"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/gasometrial_arterial"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="9"
                            android:hint="@string/FrequenciaCardiaca"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="4"
                            android:hint="@string/PAM"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="6"
                            android:hint="@string/Temperatura"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/PIC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:hint="@string/PIC"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/PPC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:hint="@string/PPC"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/pvc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:hint="@string/PVC"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/swan_ganz"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:hint="@string/Swanganz"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/capinometria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="6"
                            android:hint="@string/Capinometria"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/spo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:hint="@string/SPO2"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelBlue">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sjo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="6"
                            android:hint="@string/SJO2"
                            android:inputType="number"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <include layout="@layout/bottom_buttons_navigate_fichas"/>
    </RelativeLayout>
</LinearLayout>